# ProKnee

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/my_robot_base/lib/my_robot_base/: angle_planner.py  control  control_test  keyboard_motion_mode  keyboard_motion_mode.py  keyboard_pub  nn_control  serial_comm_node
install/my_robot_base/share/ament_index/resource_index/package_run_dependencies/: my_robot_base
install/my_robot_base/share/ament_index/resource_index/parent_prefix_path/: my_robot_base
install/my_robot_base/share/my_robot_base/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/my_robot_base/share/my_robot_base/Inference_Support/: __init__.py  positional_encoding.py
install/my_robot_base/share/my_robot_base/Models/: stance_model.onnx  swing_model.onnx
install/my_robot_base/share/my_robot_base/cmake/: my_robot_baseConfig-version.cmake  my_robot_baseConfig.cmake
install/my_robot_base/share/my_robot_base/environment/: ament_prefix_path.dsv  path.dsv
log/: latest_build
src/my_robot_base/: CMakeLists.txt  README.md
src/my_robot_base/Models/: stance_model.onnx  swing_model.onnx
src/my_robot_base/scripts/: angle_planner.py  control.py  keyboard_motion_mode.py  motion_mode_classification.py
src/my_robot_base/scripts/Inference_Support/: positional_encoding.py
src/my_robot_base/src/: serial_comm_node.cpp
